# Launchpad_Connector

./: .gitignore  CMakeLists.txt  README.md  foo.cxx  main.cxx
api/: android_flutter_so.cpp  windows_gms2_dll.cpp
example/: README.md  android_flutter_so.cpp  windows_gms2_dll.cpp
module/core/: CMakeLists.txt  README.md
module/core/api/: api.cpp
module/core/console_test/: main.cpp  main.h  test1.cpp  test2.cpp  test3.cpp
module/core/header/: core.h
module/core/source/: core.cpp  core.h
module/launchpad/: CMakeLists.txt  README.md
module/launchpad/api/: api.cpp
module/launchpad/console_test/: main.cpp  test1.cpp
module/launchpad/header/: launchpad.h
module/launchpad/source/: launchpad.cpp
source/console_test/: main.cpp
source/launchpad/: launchpad.cppm  test2.cppm
source/std/: module.cppm  std_mod.hpp
